修改图片路径

--- a/index/002_GitHub pages无法保存——解决.html
+++ b/index/002_GitHub pages无法保存——解决.html
@@ -609,9 +609,9 @@ header, .context-menu, .megamenu-content, footer{
 
 
  @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}
-</style><title>001_IDEA无法删除类--解决</title>
+</style><title>002_GitHub pages无法保存——解决</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='idea无法删除类--解决'><span>IDEA无法删除类--解决</span></h1><p><span>在某个项目里想要删除一个不需要的类：</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/001/image-20241103183448608.png?raw=true" referrerpolicy="no-referrer" alt="Fileter_transaction"></p><p>&nbsp;</p><p><span>点击OK后弹出一下画面:</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/001/image-20241103183758259.png?raw=ture" referrerpolicy="no-referrer" alt="Fileter_transaction"></p><p><span>只需要点击左下角的 Do Rafactor 就可以成功删除！</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/001/image-20241103183821524.png?raw=ture" referrerpolicy="no-referrer" alt="Fileter_transaction"></p></div></div>
+<div id='write'  class=''><h1 id='002github-pages无法保存------解决'><span>002_GitHub pages无法保存——解决</span></h1><h3 id='问题'><span>问题：</span></h3><p><span>当我想在github网站查看我的页面地址时，发现github pages页面里的branch设置无法保存</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/002/image-20241105133205266.png?raw=ture" referrerpolicy="no-referrer" alt="Fileter_transaction"></p><p>&nbsp;</p><h3 id='解决办法'><span>解决办法：</span></h3><p><span>点击main选项，选择None后保存，然后再次改为main选项后保存就可以了！</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/002/image-20241105133309188.png?raw=ture" referrerpolicy="no-referrer" alt="Fileter_transaction"></p><p>&nbsp;</p><p><span>注意⚠️：保存后刷新页面后需要等待几分钟才会出现你的站点地址</span></p><p><span>重新回到 </span><em><span>GitHub Pages</span></em><span> 部分，你应该会看到形式为“Your site is live at </span><code>https://xxxxxx</code><span>.”的一行内容。</span></p><p><img src="https://github.com/mrrjyc/jycblog.github.io/blob/main/images/002/image-20241105133540749.png?raw=ture" referrerpolicy="no-referrer" alt="Fileter_transaction"></p><p>&nbsp;</p><p>&nbsp;</p></div></div>
 </body>
 </html>
